apps/kaneo/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kaneo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kaneo
  template:
    metadata:
      labels:
        app: kaneo
    spec:
      containers:
        - name: kaneo-api
          image: ghcr.io/usekaneo/api:latest
          ports:
            - containerPort: 1337
          volumeMounts:
            - name: data-volume
              mountPath: /app/apps/api/data
              subPath: kaneo
        - name: kaneo-frontend
          image: ghcr.io/usekaneo/web:latest
          ports:
            - containerPort: 80
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: nfs-pvc
