apps/kaneo/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kaneo-service
spec:
  selector:
    app: kaneo
  ports:
    - name: http-frontend
      protocol: TCP
      port: 80
      targetPort: 80
    - name: http-api
      protocol: TCP
      port: 1337
      targetPort: 1337
  type: LoadBalancer
